# coreax

./: .copyright-template  .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FAQ.md  LICENSE  README.md  SECURITY.md  cspell.config.yaml  pyproject.toml  references.bib  requirements-3.10.txt  requirements-3.11.txt  requirements-3.9.txt  requirements-coverage-3.11.txt  requirements-coverage.txt  requirements-dev-3.10.txt  requirements-dev-3.11.txt  requirements-dev-3.9.txt  requirements-dev.txt  requirements-doc-3.11.txt  requirements-doc.txt  requirements-test-3.10.txt  requirements-test-3.11.txt  requirements-test-3.9.txt  requirements-test.txt  requirements.txt  setup.py
.cspell/: custom_misc.txt  library_terms.txt  people.txt
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  other.yml
.github/badges/: coverage.json
.github/workflows/: black.yml  check_todos.yml  code_coverage_assessment.yml  coverage.yml  docs.yml  lint.yml  performance.yml  performance_comment.yml  pre_commit_autoupdate.yml  pre_commit_checks.yml  pyright.yml  release.yml  unittests.yml  uv_lock_autoupdate.yml
benchmark/: __init__.py  benchmark_results.json  blobs_benchmark.py  blobs_benchmark_results.json  blobs_benchmark_visualiser.py  david_benchmark.py  delete_me.py  mnist_benchmark.py  mnist_benchmark_coresets_only.py  mnist_benchmark_coresets_only.py.save  mnist_benchmark_results.json  mnist_benchmark_visualiser.py  mnist_time_results.json  pounce_benchmark.py
coreax/: __init__.py  approximation.py  benchmark_util.py  coreset.py  coresubset.py  custom_types.py  data.py  inverses.py  kernel.py  kernel_functions.py  kernel_herding.py  kernel_herding_refine.py  least_squares.py  metrics.py  networks.py  proposed_data.py  recombination.py  reduction.py  refine.py  score_matching.py  tensor_kernel.py  util.py  utils.py  validation.py  weights.py
coreax/kernels/: __init__.py  base.py  composite.py  scalar_valued.py  util.py
coreax/solvers/: __init__.py  base.py  bilateral.py  composite.py  coresubset.py  gradient.py  pseudocoreset.py  recombination.py
documentation/source/: benchmark.rst  bibliography.rst  changelog.rst  conf.py  coreax.rst  coresets.rst  examples.rst  faq.rst  index.rst  modules.rst  quickstart.rst  ref_style.py  references.bib  requirements.txt
documentation/source/_templates/: module_template.rst
documentation/source/coreax/: approximations.rst  coresets.rst  coresubset.rst  data.rst  inverses.rst  kernel.rst  least_squares.rst  metrics.rst  networks.rst  reduction.rst  refine.rst  score_matching.rst  solvers.rst  utils.rst  weights.rst
documentation/source/examples/: analytical_greedy_kernel_points.rst  analytical_kernel_herding.rst  analytical_rpcholesky.rst  analytical_stein_thinning.rst  conditional_herding_basic.rst  david_map_reduce_weighted.rst  herding_stein_weighted.rst  pounce.rst  pounce_map_reduce.rst
documentation/source/snippets/: kernel_herding.py  kernel_herding_with_refine.py  kernel_herding_with_weighting.py  scalable_herding.py  score_matching.py  stein_kernel_herding.py
examples/: __init__.py  cmmd_basic.py  cmmd_map_reduce.py  cmmd_refine.py  conditional_herding_approximate_inverse.py  conditional_herding_basic.py  coreset_in_model_pipeline.py  cubature_recombination.py  david.py  david_map_reduce_weighted.py  greedy_cmmd_approximate_inverse.py  greedy_cmmd_basic.py  greedy_kernel_points_analytic.py  herding_approximate_gram_matrix.py  herding_basic.py  herding_basic_weighted.py  herding_duo_composite_kernel.py  herding_paired_kernel.py  herding_refine.py  herding_refine_weighted.py  herding_stein_weighted.py  herding_stein_weighted_ssm.py  iterative_probabilistic_kh.py  joint_herding_basic.py  pounce.py  pounce_map_reduce.py  pounce_map_reduce_ssm.py  pounce_sm.py  weighted_herding.py  weighted_herding_sm.py
pre_commit_hooks/: check_copyright.py  require_ascii.py  require_utf8.py
tests/: __init__.py  helpers.py  kernel_test.py  run_integration_tests.sh  test_examples.py  test_kernel.py  test_metrics.py  test_score_matching.py
tests/coverage/: __init__.py  compare.py
tests/integration/: __init__.py  test_cmmd_basic.py  test_cmmd_map_reduce.py  test_cmmd_refine.py  test_conditional_herding_approximate_inverse.py  test_conditional_herding_basic.py  test_coreset_in_model_pipeline.py  test_cubature_recombination.py  test_david_map_reduce_weighted.py  test_examples.py  test_greedy_cmmd_approximate_inverse.py  test_greedy_cmmd_basic.py  test_greedy_kernel_points_analytic.py  test_herding_basic.py  test_herding_basic_weighted.py  test_herding_duo_composite_kernel.py  test_herding_paired_kernel.py  test_herding_refine.py  test_herding_stein_weighted.py  test_herding_stein_weighted_ssm.py  test_herding_with_approximate_gram_matrix.py  test_joint_herding_basic.py  test_pounce.py  test_pounce_map_reduce.py  test_pounce_map_reduce_ssm.py
tests/performance/: __init__.py  compare.py  run.py  test_coresubset.py  test_kernel.py
tests/performance/cases/: __init__.py  basic_coresets.py  normaliser.py
tests/unit/: __init__.py  conftest.py  test_approximation.py  test_benchmark.py  test_coreset.py  test_coresubset.py  test_data.py  test_inverses.py  test_kernel.py  test_kernel_functions.py  test_kernels.py  test_least_squares.py  test_metrics.py  test_networks.py  test_proposed_data.py  test_pseudo_solvers.py  test_random_sample.py  test_recombination.py  test_reduction.py  test_refine.py  test_score_matching.py  test_solvers.py  test_tensor_kernel.py  test_util.py  test_validation.py  test_weights.py
